--- a/Index.HTML
+++ b/Index.HTML
@@ -37,3 +37,15 @@
 </body>
 </html>
 ```
+<div style="margin-top: 2em; text-align: left; max-width: 600px;">
+  <h2 style="text-align: center;">Psalm 23 (KJV)</h2>
+  <p>The Lord is my shepherd; I shall not want.</p>
+  <p>He maketh me to lie down in green pastures: he leadeth me beside the still waters.</p>
+  <p>He restoreth my soul: he leadeth me in the paths of righteousness for his name’s sake.</p>
+  <p>Yea, though I walk through the valley of the shadow of death, I will fear no evil: 
+     for thou art with me; thy rod and thy staff they comfort me.</p>
+  <p>Thou preparest a table before me in the presence of mine enemies: 
+     thou anointest my head with oil; my cup runneth over.</p>
+  <p>Surely goodness and mercy shall follow me all the days of my life: 
+     and I will dwell in the house of the Lord for ever.</p>
+</div>
