--- a/Index.HTML
+++ b/Index.HTML
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('your-background.jpg') no-repeat center center fixed;
+      background: url('IMG_9388.png') no-repeat center center fixed;
       background-size: cover;
       font-family: 'EB Garamond', serif;
       color: white;
