--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 2em;
       box-sizing: border-box;
       position: relative;
+      flex-direction: column;
     }
 
     .overlay {
@@ -31,20 +31,14 @@
       padding: 2em;
       border-radius: 10px;
       max-width: 700px;
-      width: 100%;
+      width: 90%;
+      opacity: 0;
     }
 
     .verse {
       opacity: 0;
       animation: fadeIn 6s ease-in forwards;
     }
-
-    .verse:nth-of-type(1) { animation-delay: 0s; }
-    .verse:nth-of-type(2) { animation-delay: 6s; }
-    .verse:nth-of-type(3) { animation-delay: 12s; }
-    .verse:nth-of-type(4) { animation-delay: 20s; }
-    .verse:nth-of-type(5) { animation-delay: 30s; }
-    .verse:nth-of-type(6) { animation-delay: 40s; }
 
     @keyframes fadeIn {
       to {
@@ -54,22 +48,29 @@
 
     #playButton {
       position: absolute;
-      top: 1em;
-      left: 1em;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background-color: rgba(255, 255, 255, 0.1);
       color: white;
       border: 1px solid white;
-      padding: 0.5em 1em;
+      padding: 0.7em 1.4em;
       border-radius: 5px;
       font-family: 'EB Garamond', serif;
-      font-size: 0.9em;
+      font-size: 1em;
       cursor: pointer;
       backdrop-filter: blur(4px);
       z-index: 1000;
+      transition: opacity 0.5s ease;
     }
 
     #playButton:focus {
       outline: 2px solid white;
+    }
+
+    #playButton.hidden {
+      opacity: 0;
+      pointer-events: none;
     }
 
     audio {
@@ -88,7 +89,7 @@
     <source src="faith-anointing-drop.mp3" type="audio/mpeg" />
   </audio>
 
-  <div class="overlay">
+  <div class="overlay" id="overlay">
     <h1>Psalm 23 (KJV)</h1>
     <p class="verse">The Lord is my shepherd; I shall not want.</p>
     <p class="verse">He maketh me to lie down in green pastures: he leadeth me beside the still waters.</p>
@@ -104,10 +105,18 @@
   <script>
     const playButton = document.getElementById("playButton");
     const audio = document.getElementById("psalmAudio");
+    const overlay = document.getElementById("overlay");
+    const verses = document.querySelectorAll(".verse");
 
     playButton.addEventListener("click", () => {
       audio.play();
-      playButton.style.display = "none";
+
+      playButton.classList.add("hidden");
+      overlay.style.opacity = 1;
+
+      verses.forEach((verse, index) => {
+        verse.style.animationDelay = `${index * 8}s`;
+      });
     });
   </script>
 </body>
