--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="audio-container">
     <audio controls>
-      <source src="faith_anointing_drop.mp3.mp3" type="audio/mpeg" />
+      <source src="faith-anointing-drop.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
   </div>
