--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
     }
 
     .audio-container {
-      position: fixed;
-      bottom: 1em;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1000;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 0.5em;
-      border-radius: 8px;
-    }
+  position: fixed;
+  bottom: 1em;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  background: transparent;
+  padding: 0;
+  border-radius: 0;
+  box-shadow: none;
+}
   </style>
 </head>
 <body>
