--- a/index.html
+++ b/index.html
@@ -45,27 +45,20 @@
 
     .custom-audio {
       position: fixed;
-      bottom: 1.5em;
+      bottom: 2em;
       left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
     }
 
     #playBtn {
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid white;
+      background: transparent;
+      border: none;
       color: white;
       font-family: 'EB Garamond', serif;
-      font-size: 1em;
-      padding: 0.5em 1em;
-      border-radius: 5px;
+      font-size: 0.85em;
+      padding: 0.3em 0.8em;
       cursor: pointer;
-      backdrop-filter: blur(4px);
-      transition: background 0.3s ease, color 0.3s ease;
-    }
-
-    #playBtn:hover {
-      background: rgba(255, 255, 255, 0.3);
     }
 
     audio {
